[gd_scene load_steps=4 format=3 uid="uid://bl2151gbexen1"]

[ext_resource type="Script" path="res://patrol_viewer.gd" id="1_0e34r"]
[ext_resource type="PackedScene" uid="uid://bw04xk18ajfyo" path="res://insert_waypoint.tscn" id="2_64cmg"]
[ext_resource type="Texture2D" uid="uid://dmks88nmnlfel" path="res://art/arrowhead.png" id="2_vv08f"]

[node name="PatrolViewer" type="Node2D"]
z_index = 8
script = ExtResource("1_0e34r")

[node name="PathPointer" type="Line2D" parent="."]
z_index = -9
points = PackedVector2Array(0, 0, 0, 0)
default_color = Color(0.568627, 0.176471, 0.176471, 1)

[node name="InsertWaypoint" parent="." instance=ExtResource("2_64cmg")]
z_index = 1

[node name="Heads" type="Node2D" parent="."]

[node name="Tip" type="Sprite2D" parent="Heads"]
z_index = 3
texture_filter = 1
texture = ExtResource("2_vv08f")

[node name="QuarterShaft" type="Sprite2D" parent="Heads"]
z_index = 3
texture_filter = 1
texture = ExtResource("2_vv08f")

[node name="ThreeFourthsShaft" type="Sprite2D" parent="Heads"]
z_index = 3
texture_filter = 1
texture = ExtResource("2_vv08f")

[connection signal="pressed" from="InsertWaypoint" to="." method="_on_insert_waypoint_pressed"]
